Fixed safari bug where prompt covers bottom of gallery

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ div.desc {
 
 #images
 {
-	margin-bottom: 40px;
+	position: relative;
+	padding-bottom: 40px;
 }
 
 #MathJax_Message
